# simple_kv_rpc

./: Cargo.toml  README.md  build.rs
proto/: kvstore.proto
src/: main.rs
